<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"

    tools:context=".DirectionFrag">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/serviceToolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"/>


    <AutoCompleteTextView
        android:id="@+id/origin"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:drawableStart="@drawable/ic_place_blue"
        android:drawableLeft="@drawable/ic_place_blue"
        android:hint="@string/hint_origin_input"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/serviceToolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/origin_clear"
        android:contentDescription="x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_clear_24"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/origin"
        app:layout_constraintEnd_toEndOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/destination"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:drawableStart="@drawable/ic_place_red"
        android:drawableLeft="@drawable/ic_place_red"
        android:hint="@string/hint_dest_input"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin" />

    <ImageButton
        android:id="@+id/destination_clear"
        android:contentDescription="x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_clear_24"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/destination"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination">

        <RadioButton
            android:id="@+id/walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mode_walking" />

        <RadioButton
            android:id="@+id/driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_driving" />

        <RadioButton
            android:id="@+id/transit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_transit" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Directions"
            android:textSize="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/btnOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigation"
            android:drawableEnd="@drawable/ic_navigation"
            android:text="@string/button_ok"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />



    </RelativeLayout>



    <ListView
        android:id="@+id/directionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>